// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Storybook Snapshots > 'ErrorBoundary' > NoError 1`] = `
<div>
  <div
    class="MuiTypography-root MuiTypography-body1 css-lrpomw-MuiTypography-root"
  >
    This is an example
  </div>
  <div
    class="MuiTypography-root MuiTypography-body1 css-1m8u8tr-MuiTypography-root"
  >
    If the app loads as expected, this component will simply load its content. If not, it will render an error as displayed in the error story.
  </div>
</div>
`;

exports[`Storybook Snapshots > 'ErrorBoundary' > WithError 1`] = `
<div>
  <div
    data-testid="error-boundary-description"
    style="margin: 1em;"
  >
    <div
      class="MuiBox-root css-19kzrtu"
      data-testid="error-message"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-1hdyuqk-MuiPaper-root-MuiAlert-root"
        data-testid="alert"
        role="alert"
      >
        <div
          class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
            data-testid="ErrorOutlineIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
        </div>
        <div
          class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
        >
          <div
            class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-yslrua-MuiTypography-root-MuiAlertTitle-root"
          >
            ApolloError
          </div>
          Sorry.. an error occurred
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-19kzrtu"
    >
      <h3>
        Try going back or refresh the page
      </h3>
      <h3>
        If the error persist, contact IT Support
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshots > 'ErrorMessage' > Primary 1`] = `
<div>
  <div
    class="MuiBox-root css-19kzrtu"
    data-testid="error-message"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-standardError MuiAlert-standard css-1hdyuqk-MuiPaper-root-MuiAlert-root"
      data-testid="alert"
      role="alert"
    >
      <div
        class="MuiAlert-icon css-1ytlwq5-MuiAlert-icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
          data-testid="ErrorOutlineIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
      </div>
      <div
        class="MuiAlert-message css-1pxa9xg-MuiAlert-message"
      >
        <div
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom MuiAlertTitle-root css-yslrua-MuiTypography-root-MuiAlertTitle-root"
        >
          ApolloError
        </div>
        An error occurred
      </div>
    </div>
  </div>
</div>
`;
